--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^13.1.6",
+    "@types/i18next": "^13.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "i18next": "^22.4.9",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-i18next": "^12.1.5"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
