--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "@types/i18next": "^13.0.0",
+    "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
     "i18next": "^22.4.9",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-i18next": "^12.1.5"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-ga": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.12",
