--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@types/i18next": "^13.0.0",
     "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
+    "gray-matter": "^4.0.3",
     "i18next": "^22.4.9",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
-    "react-i18next": "^12.1.5"
+    "react-i18next": "^12.1.5",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
