--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "@types/i18next": "^13.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
     "gray-matter": "^4.0.3",
@@ -21,6 +22,7 @@
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
