--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@next/font": "^13.1.6",
     "@types/i18next": "^13.0.0",
     "cors": "^2.8.5",
+    "disqus-react": "^1.1.5",
     "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
     "gray-matter": "^4.0.3",
