--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,37 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommand" 
-    ],
-    "overrides": [
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [ 
-    "react", 
-    "react-hooks", 
-    "@typescript-eslint", 
-    "prettier", 
-    "import" 
-    ], 
-    "rules": { 
-        "arrow-body-style": "error", 
-        "prefer-arrow-callback": "off", 
-        "no-var": "error", 
-        "no-dupe-keys": "error", 
-        "react/prop-types": "off" 
-    } 
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommand"
+  ],
+  "overrides": [
+    {
+      "files": ["**/*.md"],
+      "processor": "disable"
+    }
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "react-hooks",
+    "@typescript-eslint",
+    "prettier",
+    "import"
+  ],
+  "rules": {
+    "arrow-body-style": "error",
+    "prefer-arrow-callback": "off",
+    "no-var": "error",
+    "no-dupe-keys": "error",
+    "react/prop-types": "off"
+  }
 }
