--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "gray-matter": "^4.0.3",
     "i18next": "^22.4.9",
     "next": "latest",
+    "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "react-i18next": "^12.1.5",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.2"
+    "react-markdown": "^8.0.5",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
