--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "gray-matter": "^4.0.3",
     "i18next": "^22.4.9",
     "next": "latest",
-    "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "react-i18next": "^12.1.5",
     "react-markdown": "^8.0.5",
+    "remark": "^14.0.2",
     "remark-breaks": "^3.0.2",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -30,10 +31,12 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-ga": "^2.3.0",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
