--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gray-matter": "^4.0.3",
     "i18next": "^22.4.9",
     "next": "latest",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
