--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/i18next": "^13.0.0",
     "cors": "^2.8.5",
     "disqus-react": "^1.1.5",
