--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,14 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# QA screenshots
+qa-*.png
+superpower-hero.png
+home-page.png
+posts-page.png
+guestbook-page.png
+
+# agent state
+.omc/
+.sisyphus/
