--- a/package.json
+++ b/package.json
@@ -1,49 +1,40 @@
 {
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development next dev",
-    "build": "NODE_ENV=production next build",
-    "start": "NODE_ENV=production next start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "@next/font": "^13.1.6",
-    "@supabase/supabase-js": "^2.48.1",
-    "@types/i18next": "^13.0.0",
-    "cors": "^2.8.5",
-    "disqus-react": "^1.1.5",
-    "dotenv": "^16.0.3",
-    "eslint-plugin-import": "^2.27.5",
-    "gray-matter": "^4.0.3",
-    "i18next": "^22.4.9",
-    "next": "latest",
-    "next-seo": "^5.15.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-ga": "^3.3.1",
-    "react-i18next": "^12.1.5",
-    "react-markdown": "^8.0.5",
-    "remark": "^14.0.2",
-    "remark-breaks": "^3.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.2"
+    "@keystatic/core": "^0.5.48",
+    "@keystatic/next": "^5.0.4",
+    "@tailwindcss/typography": "^0.5.19",
+    "disqus-react": "^1.1.7",
+    "framer-motion": "^12.33.0",
+    "i18next": "^25.8.4",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-i18next": "^16.5.4",
+    "react-markdown": "^10.1.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
-    "@types/react-ga": "^2.3.0",
-    "@types/react-syntax-highlighter": "^15.5.6",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@types/node": "^22.19.10",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "^5.9.3"
   }
 }
